--- a/src/manifest.json
+++ b/src/manifest.json
@@ -18,5 +18,5 @@
   "background": {
     "service_worker": "src/background/index.js"
   },
-  "permissions": ["'nativeMessaging", "storage"]
+  "permissions": ["nativeMessaging", "storage"]
 }
